# chess-app

./: .gitignore  CLAUDE.md  DEVELOPMENT_CYCLE.md  REVIEW.md  eslint.config.js  package.json  plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: idea-analyst.md  idea-architect.md  idea-critic.md  idea-ideator.md  impl-architecture-reviewer.md  impl-coder.md  impl-quality-reviewer.md  impl-ux-reviewer.md  ops-fixer.md  ops-librarian.md  ops-monitor.md
.claude/skills/: idea-loop.md  ops-loop.md
.claude/skills/implement-loop/: SKILL.md
.github/workflows/: deploy.yml
docs/adr/: ADR-001-shakmaty.md  ADR-002-stockfish-nested-worker.md  ADR-002-wasm-test-stub.md
docs/superpowers/plans/: 2026-03-24-cicd-hello-world.md
docs/superpowers/specs/: 2026-03-24-agent-team-design.md
src/: App.tsx  index.html  test-setup.ts
src/__mocks__/: chess_wasm.ts
src/components/: Board.tsx  FlipButton.tsx  GameOverModal.tsx  GameStatus.tsx  Piece.tsx  PromotionDialog.tsx  ResetButton.tsx  ShareButton.tsx  Square.tsx  StartScreen.tsx  UndoRedoButtons.tsx  WasmErrorBoundary.tsx
src/components/__tests__/: App.test.tsx  BoardCoordinates.test.tsx  GameOverModal.test.tsx  PromotionDialog.test.tsx  ShareButton.test.tsx  StartScreen.test.tsx  (+2 more)
src/hooks/: useBoardInteraction.ts  useChessWorker.ts  useDragDrop.ts
src/public/: _headers
src/types/: chess.ts  game.ts
src/utils/: fen.ts  storage.ts
src/worker/: chess.worker.ts  loadWasm.ts  types.ts
wasm/: Cargo.toml
wasm-pkg/: chess_wasm.d.ts  chess_wasm.js
wasm/src/: lib.rs
wasm/tests/: fen_tests.rs
(+11 files in other folders)
